--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Delete.cshtml
@@ -1,51 +1,124 @@
-﻿@model DeleteScheduleViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using MediatR.Pipeline
+@model PetWorldOficial.Application.Commands.Schedule.DeleteSchedulingCommand
+
 @{
-    ViewData["Title"] = "Deletar Agendamento";
+    ViewData["Title"] = "Agendar";
     Layout = "_Layout";
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">
-        <img src="/Images/DadosDoAgendamento.png" alt="">
+    <h2 class="text-center">
+        Agendamento de Serviços
     </h2>
     <br>
 </div>
 
+@* @if (!Model.Animals!.Any()) *@
+@* { *@
+@*     <div class="modal d-flex justify-content-center align-items-center" id="animalModal" tabindex="-1" aria-labelledby="animalModalLabel" aria-hidden="true"> *@
+@*         <div class="modal-dialog"> *@
+@*             <div class="modal-content"> *@
+@*                 <div class="modal-header"> *@
+@*                     <h5 class="modal-title" id="animalModalLabel">Informação Importante</h5> *@
+@*                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> *@
+@*                 </div> *@
+@*                 <div class="modal-body"> *@
+@*                     <p>Você não possui um pet registrado! Para registrar um pet clique em continuar.</p> *@
+@*                 </div> *@
+@*                 <div class="modal-footer"> *@
+@*                     <a asp-controller="Service" asp-action="Index" class="btn btn-secondary shadow-none">Voltar</a> *@
+@*                     <a asp-controller="Animal" asp-action="Register" class="btn btn-primary shadow-none">Continuar</a> *@
+@*                 </div> *@
+@*             </div> *@
+@*         </div> *@
+@*     </div> *@
+@* *@
+@*     <script> *@
+@*         document.addEventListener("DOMContentLoaded", function() { *@
+@*             const modal = new bootstrap.Modal(document.getElementById('animalModal')); *@
+@*             modal.show(); *@
+@*         }); *@
+@*     </script> *@
+@* } *@
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="col-md-8 alert alert-danger" role="alert">
+            @TempData["ErrorMessage"]
+        </div>
+    </div>
+}
+else if (TempData["SuccessMessage"] != null)
+{
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="col-md-8 alert alert-success" role="alert">
+            @TempData["SuccessMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+}
+
 <div class="container">
-    <br>
     <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="Schedule" asp-action="Delete" method="post">
-        <input type="hidden" asp-for="@Model.Id">
-        <input type="hidden" asp-for="@Model.AnimalId">
-        <input type="hidden" asp-for="@Model.ServiceId">
+        <input type="hidden" asp-for="@Model.SchedulingId" value="@Model.SchedulingId">
+        <input type="hidden" asp-for="@Model.ServicePrice" value="@Model.ServicePrice">
 
-        <div class="col-md-8">
-            <label asp-for="@Model.Animal!.Name" class="form-label">Pet</label>
-            <input asp-for="@Model.Animal!.Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
+
+        <div class="col-md-4">
+            <label asp-for="@Model.SchedulingDate" class="form-label">Data <span style="color: red;">*</span></label>
+            <input asp-for="@Model.SchedulingDate" id="date" class="form-control shadow-none" type="text" value="@Model.SchedulingDate.ToString("dd/MM/yyyy")" readonly>
+            <span asp-validation-for="@Model.SchedulingDate" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-4">
+            <label asp-for="@Model.SchedulingTime" class="form-label">Horário <span style="color: red;">*</span></label>
+            <input asp-for="@Model.SchedulingTime" id="time" class="form-control shadow-none" value="@Model.SchedulingTime" readonly>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Service!.Name" class="form-label">Serviço</label>
-            <input asp-for="@Model.Service!.Name" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
+            <label asp-for="@Model.AnimalName" class="form-label">Pet<span style="color: red;">*</span></label>
+            <input type="text" asp-for="@Model.AnimalName" value="@Model.AnimalName" class="form-control shadow-none" readonly>
+            <span asp-validation-for="@Model.AnimalName" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Date" class="form-label">Data</label>
-            <input asp-for="@Model.Date" type="text" class="form-control shadow-none" placeholder="Descrição" readonly value="@Model.Date?.ToString("dd/MM/yyyy")">
+            <label asp-for="@Model.EmployeeName" class="form-label">Funcionário <span style="color: red;">*</span></label>
+            <input asp-for="@Model.EmployeeName" id="employee" class="form-control shadow-none" value="@Model.EmployeeName" readonly>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Time" class="form-label">Horário</label>
-            <input asp-for="@Model.Time" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
+            <label asp-for="@Model.ServiceName" class="form-label">Serviço <span style="color: red;">*</span></label>
+            <input asp-for="@Model.ServiceName" id="serviceName" class="form-control shadow-none" type="text" value="@Model.ServiceName" readonly>
+            <span asp-validation-for="@Model.ServiceName" class="text-danger"></span>
         </div>
 
-        <div class="d-grid gap-2 col-4 mx-auto col-md-5">
+        <div class="col-md-8">
+            <label asp-for="@Model.ServicePrice" class="form-label">Preço <span style="color: red;">*</span></label>
+            <input asp-for="@Model.ServicePrice" class="form-control shadow-none" type="text" value="@Model.ServicePrice.ToString("C")" readonly>
+            <span asp-validation-for="@Model.ServicePrice" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.DurationInMinutes" class="form-label">Duração em minutos <span style="color: red;">*</span></label>
+            <input asp-for="@Model.DurationInMinutes" class="form-control shadow-none" type="text" value="@Model.DurationInMinutes" readonly>
+            <span asp-validation-for="@Model.DurationInMinutes" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Observation" class="form-label">Observação</label>
+            <textarea asp-for="@Model.Observation" class="form-control shadow-none" placeholder="Escreva uma observação" style="height: 100px" readonly></textarea>
+            <span asp-validation-for="@Model.Observation" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-5 d-grid gap-2 col-4 mx-auto">
             <br>
-            <button type="submit" class="btn btn-dark btn-lg">Cancelar</button>
+            <button class="btn btn-dark btn-lg shadow-none" type="submit">Cancelar</button>
         </div>
     </form>
-
-    <footer>
-
-    </footer>
 </div>
+
+<footer>
+</footer>
