chore: Gerada migration FixCartTable

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
@@ -6,7 +6,7 @@ Layout = "_Layout";
 
 @if (User.IsInRole("Admin"))
 {
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
     <h1 class="text-center">Agendamentos</h1>
     <br>
@@ -14,7 +14,7 @@ Layout = "_Layout";
 }
 else
 {
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
     <h1 class="text-center">
         Meus Agendamentos
