--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
@@ -8,11 +8,11 @@
     Layout = "_Layout";
 }
 
-<div class="container-fluid py-3">
+<div class="container-fluid tpy-3">
     <br>
-    <h2 class="text-center">
+    <h1 class="text-center">
         Serviços
-    </h2>
+    </h1>
     <br>
 </div>
 
