--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/NavMenuPartial.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/NavMenuPartial.cshtml
@@ -27,16 +27,20 @@
                 @*     <a class="nav-link active" asp-controller="Animal" asp-action="Register">Cadastrar Pet</a> *@
                 @* </li> *@
 
-                <li class="nav-item">
-                    @if (User.IsInRole(ERole.Admin.ToString()))
-                    {
+
+                @if (User.IsInRole(ERole.Admin.ToString()))
+                {
+                    <li class="nav-item">
                         <a class="nav-link active" asp-controller="Animal" asp-action="Index">Pets</a>
-                    }
-                    else
-                    {
-                        <a class="nav-link active" asp-controller="Animal" asp-action="Index">Meus Pets</a>
-                    }
-                </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Schedule" asp-action="Index">Agendamentos</a>
+                    </li>
+                }
+                else
+                {
+                    <a class="nav-link active" asp-controller="Animal" asp-action="Index">Meus Pets</a>
+                }
                 @if (User.IsInRole(ERole.Admin.ToString()))
                 {
                     <li class="nav-item">
