--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Create.cshtml
@@ -25,7 +25,14 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Você não possui um pet registrado! Para registrar um pet clique em continuar.</p>
+                    @if (!User.IsInRole(ERole.Admin.ToString()))
+                    {
+                        <p>Você não possui um pet cadastrado! Para cadastrar um pet clique em continuar.</p>
+                    }
+                    else
+                    {
+                        <p>Não há nenhum pet cadastrado no sistema! Para cadastrar um pet clique em continuar.</p>
+                    }
                 </div>
                 <div class="modal-footer">
                     <a asp-controller="Service" asp-action="Index" class="btn btn-secondary shadow-none">Voltar</a>
@@ -162,143 +169,143 @@ else if (TempData["SuccessMessage"] != null)
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-$(document).ready(function () {
-    let isSubmitting = false;
+    $(document).ready(function () {
+        let isSubmitting = false;
 
-    // Função para buscar horários disponíveis
-    function fetchTimesGenerator() {
-        var selectedDate = $('#date').val();
-        var durationInMinutes = $('#durationInMinutes').val();
-        var serviceName = $('#serviceName').val();
-        var categoryName = $('#categoryName').val();
+        // Função para buscar horários disponíveis
+        function fetchTimesGenerator() {
+            var selectedDate = $('#date').val();
+            var durationInMinutes = $('#durationInMinutes').val();
+            var serviceName = $('#serviceName').val();
+            var categoryName = $('#categoryName').val();
 
-        if (selectedDate && !isSubmitting) {
-            $.ajax({
-                url: '@Url.Action("GetAvailableTimes", "Schedule")',
-                type: 'GET',
-                data: {
-                    date: selectedDate,
-                    durationInMinutes: durationInMinutes,
-                    serviceName: serviceName,
-                    categoryName: categoryName
-                },
-                success: function (data) {
-                    var timeSelect = $('#time');
-                    timeSelect.empty(); // Limpa os horários atuais
-                    timeSelect.append('<option value="" selected disabled>Selecione um horário</option>');
+            if (selectedDate && !isSubmitting) {
+                $.ajax({
+                    url: '@Url.Action("GetAvailableTimes", "Schedule")',
+                    type: 'GET',
+                    data: {
+                        date: selectedDate,
+                        durationInMinutes: durationInMinutes,
+                        serviceName: serviceName,
+                        categoryName: categoryName
+                    },
+                    success: function (data) {
+                        var timeSelect = $('#time');
+                        timeSelect.empty(); // Limpa os horários atuais
+                        timeSelect.append('<option value="" selected disabled>Selecione um horário</option>');
 
-                    let firstAvailableTime = null;
-                    let allTimesDisabled = true; // Assume que todos os horários estão preenchidos
+                        let firstAvailableTime = null;
+                        let allTimesDisabled = true; // Assume que todos os horários estão preenchidos
 
-                    $.each(data, function (index, timeDTO) {
-                        var option = $('<option></option>')
-                            .attr('value', timeDTO.time)
-                            .text(timeDTO.time);
+                        $.each(data, function (index, timeDTO) {
+                            var option = $('<option></option>')
+                                .attr('value', timeDTO.time)
+                                .text(timeDTO.time);
 
-                        if (!timeDTO.status) {
-                            option.attr('disabled', 'disabled'); // Desabilita horários não disponíveis
-                        } else {
-                            allTimesDisabled = false; // Pelo menos um horário disponível
-                            if (firstAvailableTime === null) {
-                                firstAvailableTime = timeDTO.time;
+                            if (!timeDTO.status) {
+                                option.attr('disabled', 'disabled'); // Desabilita horários não disponíveis
+                            } else {
+                                allTimesDisabled = false; // Pelo menos um horário disponível
+                                if (firstAvailableTime === null) {
+                                    firstAvailableTime = timeDTO.time;
+                                }
                             }
+
+                            timeSelect.append(option);
+                        });
+
+                        // Define o primeiro horário disponível, se houver
+                        if (firstAvailableTime) {
+                            timeSelect.val(firstAvailableTime);
                         }
 
-                        timeSelect.append(option);
-                    });
-
-                    // Define o primeiro horário disponível, se houver
-                    if (firstAvailableTime) {
-                        timeSelect.val(firstAvailableTime);
-                    }
-
-                    // Verifica se todos os horários estão ocupados e desabilita funcionários se for o caso
-                    if (allTimesDisabled) {
-                        console.log('Todos os horários estão ocupados. Desabilitando funcionários.');
-                        $('#employee').prop('disabled', true); // Desabilita o campo de funcionários
-                    } else {
-                        console.log('Existem horários disponíveis. Habilitando funcionários.');
-                        $('#employee').prop('disabled', false); // Habilita o campo de funcionários
-                        fetchAvailableEmployees(); // Busca os funcionários disponíveis
-                    }
-
-                    // Para depuração
-                    console.log('Horários Disponíveis:', data);
-                },
-                error: function (xhr, status, error) {
-                    console.error('Erro ao buscar horários disponíveis:', error);
-                }
-            });
-        }
-    }
-
-    // Função para buscar funcionários disponíveis
-    function fetchAvailableEmployees() {
-        var selectedDate = $('#date').val();
-        var selectedTime = $('#time').val();
-        var durationInMinutes = $('#durationInMinutes').val();
-        var serviceName = $('#serviceName').val();
-        var categoryName = $('#categoryName').val();
-
-        // Verifica se a data e o horário foram selecionados e o formulário não está sendo enviado
-        if (selectedDate && selectedTime && !isSubmitting) {
-            $.ajax({
-                url: '@Url.Action("GetAvailableEmployees", "Schedule")',
-                type: 'GET',
-                data: {
-                    CategoryName: categoryName,
-                    ServiceName: serviceName,
-                    SchedulingDate: selectedDate,
-                    SchedulingTime: selectedTime,
-                    DurationInMinutes: durationInMinutes
-                },
-                success: function (data) {
-                    var employeeSelect = $('#employee');
-                    employeeSelect.empty(); // Limpa os funcionários atuais
-                    employeeSelect.append('<option value="" selected disabled>Selecione um funcionário</option>');
-
-                    $.each(data, function (index, employee) {
-                        var option = $('<option></option>')
-                            .attr('value', employee.item1) // item1 para o ID do funcionário
-                            .text(employee.item2); // item2 para o nome do funcionário
-
-                        if (!employee.item3) {
-                            option.attr('disabled', 'disabled'); // Desabilita se o status for falso
+                        // Verifica se todos os horários estão ocupados e desabilita funcionários se for o caso
+                        if (allTimesDisabled) {
+                            console.log('Todos os horários estão ocupados. Desabilitando funcionários.');
+                            $('#employee').prop('disabled', true); // Desabilita o campo de funcionários
+                        } else {
+                            console.log('Existem horários disponíveis. Habilitando funcionários.');
+                            $('#employee').prop('disabled', false); // Habilita o campo de funcionários
+                            fetchAvailableEmployees(); // Busca os funcionários disponíveis
                         }
 
-                        employeeSelect.append(option);
-                    });
-
-                    // Para depuração
-                    console.log('Funcionários Disponíveis:', data);
-                },
-                error: function (xhr, status, error) {
-                    console.error('Erro ao buscar funcionários disponíveis:', error);
-                }
-            });
+                        // Para depuração
+                        console.log('Horários Disponíveis:', data);
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Erro ao buscar horários disponíveis:', error);
+                    }
+                });
+            }
         }
-    }
 
-    // Chama a função para buscar os horários ao carregar a página
-    fetchTimesGenerator();
+        // Função para buscar funcionários disponíveis
+        function fetchAvailableEmployees() {
+            var selectedDate = $('#date').val();
+            var selectedTime = $('#time').val();
+            var durationInMinutes = $('#durationInMinutes').val();
+            var serviceName = $('#serviceName').val();
+            var categoryName = $('#categoryName').val();
 
-    // Reexecuta a função ao alterar a data
-    $('#date').change(function () {
+            // Verifica se a data e o horário foram selecionados e o formulário não está sendo enviado
+            if (selectedDate && selectedTime && !isSubmitting) {
+                $.ajax({
+                    url: '@Url.Action("GetAvailableEmployees", "Schedule")',
+                    type: 'GET',
+                    data: {
+                        CategoryName: categoryName,
+                        ServiceName: serviceName,
+                        SchedulingDate: selectedDate,
+                        SchedulingTime: selectedTime,
+                        DurationInMinutes: durationInMinutes
+                    },
+                    success: function (data) {
+                        var employeeSelect = $('#employee');
+                        employeeSelect.empty(); // Limpa os funcionários atuais
+                        employeeSelect.append('<option value="" selected disabled>Selecione um funcionário</option>');
+
+                        $.each(data, function (index, employee) {
+                            var option = $('<option></option>')
+                                .attr('value', employee.item1) // item1 para o ID do funcionário
+                                .text(employee.item2); // item2 para o nome do funcionário
+
+                            if (!employee.item3) {
+                                option.attr('disabled', 'disabled'); // Desabilita se o status for falso
+                            }
+
+                            employeeSelect.append(option);
+                        });
+
+                        // Para depuração
+                        console.log('Funcionários Disponíveis:', data);
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Erro ao buscar funcionários disponíveis:', error);
+                    }
+                });
+            }
+        }
+
+        // Chama a função para buscar os horários ao carregar a página
         fetchTimesGenerator();
-    });
 
-    // Reexecuta a função ao alterar o horário
-    $('#time').change(function () {
-        fetchAvailableEmployees();
-    });
+        // Reexecuta a função ao alterar a data
+        $('#date').change(function () {
+            fetchTimesGenerator();
+        });
 
-    // Marca quando o formulário está sendo submetido
-    $('form').on('submit', function (event) {
-        isSubmitting = true;
-        var selectedEmployeeId = $('#employee').val();
-        $('#employeeId').val(selectedEmployeeId); // Preenche o campo oculto com o ID selecionado
+        // Reexecuta a função ao alterar o horário
+        $('#time').change(function () {
+            fetchAvailableEmployees();
+        });
+
+        // Marca quando o formulário está sendo submetido
+        $('form').on('submit', function (event) {
+            isSubmitting = true;
+            var selectedEmployeeId = $('#employee').val();
+            $('#employeeId').val(selectedEmployeeId); // Preenche o campo oculto com o ID selecionado
+        });
     });
-});
 </script>
 
 
