feat: finalizado carrinho de compras

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -41,7 +41,7 @@
         <input type="hidden" asp-for="@Model.Id">
         <input type="hidden" asp-for="@Model.UserId">
         <input type="hidden" asp-for="@Model.CategoryId">
-        <input type="hidden" asp-for="@Model.RaceId">
+        @* <input type="hidden" asp-for="@Model.RaceId"> *@
         <input type="hidden" asp-for="@Model.Gender" value="@Model.Gender"/>
 
         <div class="col-md-6">
