--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -64,183 +64,192 @@ else if (TempData["SuccessMessage"] != null)
 
 @if (Model.Any())
 {
-    if (!User.IsInRole(ERole.Admin.ToString()))
-    {
-        <div class="container">
-            <div class="pb-2">
-                <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
-                    <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Pet
-                </a>
-            </div>
-
-            <div class="row">
-                @foreach (var animal in Model)
-                {
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100" style="padding: 15px">
-                            @if (animal.ImageUrl != null)
-                            {
-                                <div class="d-flex justify-content-center align-items-center" style="overflow: hidden">
-                                    <img style="width: min-content; height: 250px" src="/Images/@animal.ImageUrl"
-                                         class="card-img-top"
-                                         alt="...">
-                                </div>
-                            }
-                            else
-                            {
-                                <div class="d-flex justify-content-center align-items-center" style="overflow: hidden">
-                                    <img style="width: min-content; height: 250px " src="/Images/PetImage.jpg"
-                                         class="card-img-top"
-                                         alt="...">
-                                </div>
-                            }
-
-                            <div class="card-body" style="padding: 10px 0 0;">
-                                @if (animal.Gender.Equals(EGender.Female.ToString()))
-                                {
-                                    <h5 class="card-title">
-                                        <img style="width: 20px" src="/Images/female-svgrepo-com.svg" alt=""> @animal.Name
-                                    </h5>
-                                }
-                                else
-                                {
-                                    <h5 class="card-title">
-                                        <img style="width: 20px" src="/Images/male-svgrepo-com.svg" alt=""> @animal.Name
-                                    </h5>
-                                }
-                                <br>
-
-                                @* @if (User.IsInRole(ERole.Admin.ToString())) *@
-                                @* { *@
-                                @*     <p> *@
-                                @*         <b>Dono:</b> @animal.Owner!.Name *@
-                                @*     </p> *@
-                                @* } *@
-
-                                <p>
-                                    <b>Raça:</b> @animal.Race.Name
-                                </p>
-
-                                @if (animal.BirthDate != null)
-                                {
-                                    <p>
-                                        <b>Idade:</b> @(DateTime.Now.Year - animal.BirthDate!.Value.Year) anos
-                                    </p>
-                                }
-                                else
-                                {
-                                    <p>
-                                        <b>Idade:</b> Não consta.
-                                    </p>
-                                }
-                                <br>
-                                <div class="d-flex justify-content-center align-items-center">
-                                    <div style="padding-right: 15px">
-                                        <a style="width: 100px;" class="btn btn-dark me-2 shadow-none" asp-controller="Animal"
-                                           asp-action="Update" asp-route-id="@animal.Id">
-                                            Editar
-                                        </a>
-                                    </div>
-                                    <div style="padding-left: 15px">
-                                        <a style="width: 100px" class="btn btn-danger shadow-none"
-                                           asp-controller="Animal" asp-action="Delete" asp-route-id="@animal.Id">
-                                            Excluir
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+    <div class="container">
+        <!-- Barra de pesquisa para Admin -->
+        @if (User.IsInRole("Admin"))
+        {
+            <section class="my-5">
+                <div class="container">
+                    <div class="row mb-3">
+                        <div class="col-md-6 d-flex justify-content-start">
+                            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Auth" asp-action="Register">
+                                <img style="width: 25px" src="/Images/addition.svg" alt=""> Novo Pet
+                            </a>
+                        </div>
+                        <div class="col-md-6 d-flex justify-content-end">
+                            <input type="text" class="form-control" id="searchInput" placeholder="Pesquisar pet..." onkeyup="searchPet()">
                         </div>
                     </div>
-                }
-            </div>
-        </div>
-    }
-    else
-    {
-        <section class="my-5">
-            <div class="container">
-                <div class="pb-2">
-                    <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
-                        <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Pet
-                    </a>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        @foreach (var animal in Model)
-                        {
-                            <div class="card cart-card mb-3">
-                                <div class="card-body d-flex justify-content-between align-items-center">
-                                    <div class="d-flex">
-                                        @if (animal.ImageUrl is not null)
-                                        {
-                                            <img
-                                                src="/Images/@animal.ImageUrl"
-                                                alt="Imagem pet"
-                                                class="img-fluid me-4"
-                                                style="width: 100px; object-fit: cover"/>
-                                        }
-                                        else
-                                        {
-                                            <img
-                                                src="/Images/PetImage.jpg"
-                                                alt="Imagem pet"
-                                                class="img-fluid me-4"
-                                                style="width: 100px; object-fit: cover"/>
-                                        }
-                                        <div>
-                                            <h5 class="card-title">@animal.Id - @animal.Name</h5>
-                                            <p class="card-text">
-                                                <strong>Dono:</strong> @animal.Owner.Name
-                                            </p>
-                                            <p class="card-text">
-                                                <strong>CPF do dono:</strong> @animal.Owner.Document
-                                            </p>
-                                            <p class="card-text">
-                                                <strong>Raça:</strong> @animal.Race.Name
-                                            </p>
-                                            @if (animal.BirthDate != null)
+                    <div class="row" id="petList">
+                        <div class="col-lg-12">
+                            @foreach (var animal in Model)
+                            {
+                                <div class="card cart-card mb-3 pet-card">
+                                    <div class="card-body d-flex justify-content-between align-items-center">
+                                        <div class="d-flex">
+                                            @if (animal.ImageUrl is not null)
                                             {
-                                                <p class="card-text">
-                                                    <strong>Idade:</strong> @(DateTime.Now.Year - animal.BirthDate!.Value.Year) anos
-                                                </p>
+                                                <img
+                                                    src="/Images/@animal.ImageUrl"
+                                                    alt="Imagem pet"
+                                                    class="img-fluid me-4"
+                                                    style="width: 100px; object-fit: cover"/>
                                             }
                                             else
                                             {
-                                                <p class="card-text">
-                                                    <strong>Idade:</strong> Não consta.
-                                                </p>
+                                                <img
+                                                    src="/Images/PetImage.jpg"
+                                                    alt="Imagem pet"
+                                                    class="img-fluid me-4"
+                                                    style="width: 100px; object-fit: cover"/>
                                             }
+                                            <div>
+                                                <h5 class="card-title">@animal.Id - @animal.Name</h5>
+                                                <p class="card-text">
+                                                    <strong>Dono:</strong> @animal.Owner.Name
+                                                </p>
+                                                <p class="card-text">
+                                                    <strong>CPF do dono:</strong> @animal.Owner.Document
+                                                </p>
+                                                <p class="card-text">
+                                                    <strong>Raça:</strong> @animal.Race
+                                                </p>
+                                                @if (animal.BirthDate != null)
+                                                {
+                                                    <p class="card-text">
+                                                        <strong>Idade:</strong> @(DateTime.Now.Year - animal.BirthDate!.Value.Year) anos
+                                                    </p>
+                                                }
+                                                else
+                                                {
+                                                    <p class="card-text">
+                                                        <strong>Idade:</strong> Não consta.
+                                                    </p>
+                                                }
+                                            </div>
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <a href="@Url.Action("Update", "Animal", new { id = animal.Id })" class="btn btn-warning mb-2">Editar</a>
+                                            <a href="@Url.Action("Delete", "Animal", new { id = animal.Id })" class="btn btn-danger">Deletar</a>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-column">
-                                        <a href="@Url.Action("Update", "Animal", new { id = animal.Id })" class="btn btn-warning mb-2">Editar</a>
-                                        <a href="@Url.Action("Delete", "Animal", new { id = animal.Id })" class="btn btn-danger">Deletar</a>
-                                    </div>
                                 </div>
-                            </div>
-                        }
+                            }
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    }
+            </section>
+        }
+        else
+        {
+                        <section class="my-5">
+                <div class="container">
+                    <div class="row mb-3">
+                        <div class="col-md-6 d-flex justify-content-start">
+                            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Auth" asp-action="Register">
+                                <img style="width: 25px" src="/Images/addition.svg" alt=""> Novo Pet
+                            </a>
+                        </div>
+                        <div class="col-md-6 d-flex justify-content-end">
+                            <input type="text" class="form-control" id="searchInput" placeholder="Pesquisar pet..." onkeyup="searchPet()">
+                        </div>
+                    </div>
+                    <div class="row" id="petList">
+                        <div class="col-lg-12">
+                            @foreach (var animal in Model)
+                            {
+                                <div class="card cart-card mb-3 pet-card">
+                                    <div class="card-body d-flex justify-content-between align-items-center">
+                                        <div class="d-flex">
+                                            @if (animal.ImageUrl is not null)
+                                            {
+                                                <img
+                                                    src="/Images/@animal.ImageUrl"
+                                                    alt="Imagem pet"
+                                                    class="img-fluid me-4"
+                                                    style="width: 100px; object-fit: cover"/>
+                                            }
+                                            else
+                                            {
+                                                <img
+                                                    src="/Images/PetImage.jpg"
+                                                    alt="Imagem pet"
+                                                    class="img-fluid me-4"
+                                                    style="width: 100px; object-fit: cover"/>
+                                            }
+                                            <div>
+                                                <h5 class="card-title">@animal.Id - @animal.Name</h5>
+                                                <p class="card-text">
+                                                    <strong>Dono:</strong> @animal.Owner.Name
+                                                </p>
+                                                <p class="card-text">
+                                                    <strong>CPF do dono:</strong> @animal.Owner.Document
+                                                </p>
+                                                <p class="card-text">
+                                                    <strong>Raça:</strong> @animal.Race
+                                                </p>
+                                                @if (animal.BirthDate != null)
+                                                {
+                                                    <p class="card-text">
+                                                        <strong>Idade:</strong> @(DateTime.Now.Year - animal.BirthDate!.Value.Year) anos
+                                                    </p>
+                                                }
+                                                else
+                                                {
+                                                    <p class="card-text">
+                                                        <strong>Idade:</strong> Não consta.
+                                                    </p>
+                                                }
+                                            </div>
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <a href="@Url.Action("Update", "Animal", new { id = animal.Id })" class="btn btn-warning mb-2">Editar</a>
+                                            <a href="@Url.Action("Delete", "Animal", new { id = animal.Id })" class="btn btn-danger">Deletar</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </section>
+        }
+    </div>
 }
 else
 {
     <div class="container-fluid py-3">
-        <br>
-        <div class="container-fluid py-3">
-            <br>
-            <h2 class="text-center">
-                @TempData["NotFoundPetMessage"]
-            </h2>
-        </div>
-        <br>
-
+        <h2 class="text-center">
+            @TempData["NotFoundPetMessage"]
+        </h2>
         <div class="d-flex justify-content-center align-items-center">
             <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
                 <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Pet
             </a>
         </div>
     </div>
+}
+
+@section Scripts {
+    <script>
+        function searchPet() {
+            var input = document.getElementById("searchInput");
+            var filter = input.value.toUpperCase();
+            var petList = document.getElementById("petList");
+            var cards = petList.getElementsByClassName("pet-card");
+
+            Array.from(cards).forEach(function(card) {
+                // Buscar pelo título, descrição e CPF
+                var title = card.querySelector(".card-title")?.textContent || "";
+                var description = card.querySelector(".card-text")?.textContent || "";
+                var cpf = card.querySelector(".card-text:nth-child(3)")?.textContent || ""; // CPF do dono
+
+                if (title.toUpperCase().indexOf(filter) > -1 || description.toUpperCase().indexOf(filter) > -1 || cpf.toUpperCase().indexOf(filter) > -1) {
+                    card.style.display = "";
+                } else {
+                    card.style.display = "none";
+                }
+            });
+        }
+    </script>
 }
