--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -10,9 +10,9 @@
 
 <div class="container-fluid py-3">
     <br>
-    <h2 class="text-center">
-        Cadastro de Pet
-    </h2>
+    <h1 class="text-center">
+        Dados do Pet
+    </h1>
     <br>
 </div>
 
@@ -79,16 +79,22 @@ else if (TempData["SuccessMessage"] != null)
             </div>
         }
 
+        @* <div class="col-md-6"> *@
+        @*     <label asp-for="@Model!.RaceId" class="form-label">Raça <span style="color: red;">*</span></label> *@
+        @*     <select asp-for="@Model!.RaceId" class="form-select shadow-none"> *@
+        @*         <option value="" selected disabled>Selecione a raça</option> *@
+        @*         @foreach (var race in Model!.Races) *@
+        @*         { *@
+        @*             <option value="@race!.Id">@race.Name</option> *@
+        @*         } *@
+        @*     </select> *@
+        @*     <span asp-validation-for="@Model!.RaceId" class="text-danger"></span> *@
+        @* </div> *@
+
         <div class="col-md-6">
-            <label asp-for="@Model!.RaceId" class="form-label">Raça <span style="color: red;">*</span></label>
-            <select asp-for="@Model!.RaceId" class="form-select shadow-none">
-                <option value="" selected disabled>Selecione a raça</option>
-                @foreach (var race in Model!.Races)
-                {
-                    <option value="@race!.Id">@race.Name</option>
-                }
-            </select>
-            <span asp-validation-for="@Model!.RaceId" class="text-danger"></span>
+            <label asp-for="@Model.RaceName" class="form-label">Raça<span style="color: red;">*</span></label>
+            <input asp-for="@Model.RaceName" type="text" class="form-control shadow-none" placeholder="Digite a raça">
+            <span asp-validation-for="RaceName" class="text-danger"></span>
         </div>
 
         <div class="col-md-2">
