--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
@@ -9,11 +9,11 @@
     var gender = (EGender)Enum.Parse(typeof(EGender), Model.Gender);
 }
 
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
-    <h2 class="display-6 text-center fw">
+    <h1 class="text-center">
         Dados do Pet
-    </h2>
+    </h1>
     <br>
 </div>
 
@@ -65,10 +65,10 @@
         <input type="hidden" asp-for="@Model.CategoryTitle">
         <input type="hidden" asp-for="@Model.ImageUrl">
 
-        @if (Model.RaceId == 0 || Model.CategoryId == 0)
+        @if (Model.CategoryId == 0)
         {
             <input type="hidden" asp-for="@Model.CategoryId">
-            <input type="hidden" asp-for="@Model.RaceId">
+            @* <input type="hidden" asp-for="@Model.RaceId"> *@
         }
 
         <div class="col-md-6">
@@ -89,16 +89,22 @@
             <span asp-validation-for="Gender" class="text-danger"></span>
         </div>
 
+        @* <div class="col-md-6"> *@
+        @*     <label asp-for="@Model.RaceId" class="form-label">Raça <span style="color: red;">*</span></label> *@
+        @*     <select asp-for="@Model.RaceId" class="form-select shadow-none"> *@
+        @*         <option value="@Model.RaceId" disabled selected>@Model.RaceName</option> *@
+        @*         @foreach (var race in Model.Races) *@
+        @*         { *@
+        @*             <option value="@race.Id">@race.Name</option> *@
+        @*         } *@
+        @*     </select> *@
+        @*     <span asp-validation-for="RaceId" class="text-danger"></span> *@
+        @* </div> *@
+
         <div class="col-md-6">
-            <label asp-for="@Model.RaceId" class="form-label">Raça <span style="color: red;">*</span></label>
-            <select asp-for="@Model.RaceId" class="form-select shadow-none">
-                <option value="@Model.RaceId" disabled selected>@Model.RaceName</option>
-                @foreach (var race in Model.Races)
-                {
-                    <option value="@race.Id">@race.Name</option>
-                }
-            </select>
-            <span asp-validation-for="RaceId" class="text-danger"></span>
+            <label asp-for="@Model.RaceName" class="form-label">Raça<span style="color: red;">*</span></label>
+            <input asp-for="@Model.RaceName" type="text" class="form-control shadow-none" placeholder="Digite a raça">
+            <span asp-validation-for="RaceName" class="text-danger"></span>
         </div>
 
         <div class="col-md-2">
