--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
@@ -34,43 +34,48 @@
 @if (Model is not null && Model.Count() != 0)
 {
     <section class="my-5">
+        <!-- Campo de pesquisa -->
         <div class="container">
-            <div class="pb-2">
-                <a class="btn btn-dark fw-normal shadow-none" asp-controller="Supplier" asp-action="Register">
-                    <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Fornecedor
-                </a>
+            <div class="row mb-3">
+                <div class="col-md-6 d-flex justify-content-start">
+                    <a class="btn btn-dark fw-normal shadow-none" asp-controller="Supplier" asp-action="Register">
+                        <img style="width: 25px" src="/Images/addition.svg" alt=""> Novo Fornecedor
+                    </a>
+                </div>
+                <div class="col-md-6 d-flex justify-content-end">
+                    <input type="text" class="form-control" id="searchInput" placeholder="Pesquisar por nome ou e-mail..." onkeyup="searchSupplier()">
+                </div>
             </div>
-            <div class="row">
+        </div>
+        <div class="container">
+            <div class="row" id="supplierContainer">
                 <div class="col-lg-12">
-                    @if (Model != null && Model.Any())
+                    @foreach (var supplier in Model)
                     {
-                        foreach (var supplier in Model)
-                        {
-                            <div class="card cart-card mb-3">
-                                <div class="card-body d-flex justify-content-between align-items-center">
-                                    <div class="d-flex">
-                                        <img
-                                            src="/Images/supplier_7988637.png"
-                                            alt="Imagem fornecedor"
-                                            class="img-fluid me-4"
-                                            style="width: 100px; object-fit: cover"/>
-                                        <div>
-                                            <h5 class="card-title">@supplier!.Id - @supplier.Name</h5>
-                                            <p class="card-text">
-                                                <strong>Telefone:</strong> @supplier.CellPhone
-                                            </p>
-                                            <p class="card-text">
-                                                <strong>Email:</strong> @supplier.Email
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="d-flex flex-column">
-                                        <a href="@Url.Action("Update", "Supplier", new { id = supplier.Id })" class="btn btn-warning mb-2">Editar</a>
-                                        <a href="@Url.Action("Delete", "Supplier", new { id = supplier.Id })" class="btn btn-danger">Deletar</a>
+                        <div class="card cart-card mb-3 supplier-card">
+                            <div class="card-body d-flex justify-content-between align-items-center">
+                                <div class="d-flex">
+                                    <img
+                                        src="/Images/supplier_7988637.png"
+                                        alt="Imagem fornecedor"
+                                        class="img-fluid me-4"
+                                        style="width: 100px; object-fit: cover"/>
+                                    <div>
+                                        <h5 class="card-title supplier-name">@supplier!.Id - @supplier.Name</h5>
+                                        <p class="card-text">
+                                            <strong>Telefone:</strong> @supplier.CellPhone
+                                        </p>
+                                        <p class="card-text">
+                                            <strong>Email:</strong> <span class="supplier-email">@supplier.Email</span>
+                                        </p>
                                     </div>
                                 </div>
+                                <div class="d-flex flex-column">
+                                    <a href="@Url.Action("Update", "Supplier", new { id = supplier.Id })" class="btn btn-warning mb-2">Editar</a>
+                                    <a href="@Url.Action("Delete", "Supplier", new { id = supplier.Id })" class="btn btn-danger">Deletar</a>
+                                </div>
                             </div>
-                        }
+                        </div>
                     }
                 </div>
             </div>
@@ -87,8 +92,31 @@ else
     </div>
     <div class="d-flex justify-content-center align-items-center">
         <br>
-        <a class="btn btn-dark fw-normal shadow-none" asp-controller="Service" asp-action="Create">
+        <a class="btn btn-dark fw-normal shadow-none" asp-controller="Supplier" asp-action="Register">
             Adicionar Fornecedor
         </a>
     </div>
 }
+
+<script>
+    function searchSupplier() {
+        var input = document.getElementById("searchInput");
+        var filter = input.value.toLowerCase();
+        var supplierContainer = document.getElementById("supplierContainer");
+        var supplierCards = supplierContainer.getElementsByClassName("supplier-card");
+
+        for (var i = 0; i < supplierCards.length; i++) {
+            var supplierName = supplierCards[i].getElementsByClassName("supplier-name")[0];
+            var supplierEmail = supplierCards[i].getElementsByClassName("supplier-email")[0];
+            if (supplierName || supplierEmail) {
+                var nameText = supplierName.textContent || supplierName.innerText;
+                var emailText = supplierEmail.textContent || supplierEmail.innerText;
+                if (nameText.toLowerCase().indexOf(filter) > -1 || emailText.toLowerCase().indexOf(filter) > -1) {
+                    supplierCards[i].style.display = "";
+                } else {
+                    supplierCards[i].style.display = "none";
+                }
+            }
+        }
+    }
+</script>
