--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Cart/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Cart/Index.cshtml
@@ -57,7 +57,7 @@
                                     <strong class="cart-total-price">R$ @Model.TotalPrice.ToString("F2")</strong>
                                 </li>
                             </ul>
-                            <a class="btn btn-success btn-block" asp-controller="Checkout" asp-action="Checkout">Finalizar Compra</a>
+                            <a class="btn btn-success btn-block" href="@Url.Action("PaymentMethods", "Checkout")">Finalizar Compra</a>
                         </div>
                     </div>
                 </div>
